@startuml

class FrontendService {
    +fetchAvailableServices()
    +requestService(serviceId)
    +getUserSession()
}

class BackendAPI {
    +getAvailableServices()
    +processServiceRequest(serviceId, userId)
    +authenticateUser(token)
}

class ExternalServiceAdapter {
    +callService(serviceId, payload)
    +mapResponseToDomainModel(response)
}

class AuthServiceAdapter {
    +callService(payload)
}

class DatabaseService {
    +saveServiceRequest(userId, serviceId, status)
    +getUserSession(userId)
    +updateServiceStatus(requestId, status)
}

FrontendService --> BackendAPI : uses
BackendAPI --> ExternalServiceAdapter : uses
BackendAPI --> DatabaseService : uses
ExternalServiceAdapter --> AuthServiceAdapter : delegates to

@enduml
